--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,26 +21,26 @@ INCLUDE (CheckIncludeFiles)
 INCLUDE (CheckFunctionExists)
 INCLUDE (TestBigEndian)
 
-CHECK_INCLUDE_FILES(stdint.h HAVE_STDINT_H)
-CHECK_INCLUDE_FILES(stddef.h HAVE_STDDEF_H)
-CHECK_INCLUDE_FILES(byteswap.h HAVE_BYTESWAP_H)
-CHECK_INCLUDE_FILES(dlfcn.h HAVE_DLFCN_H)
-CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
-CHECK_INCLUDE_FILES(memory.h HAVE_MEMORY_H)
-CHECK_INCLUDE_FILES(stdlib.h HAVE_STDLIB_H)
-CHECK_INCLUDE_FILES(strings.h HAVE_STRINGS_H)
-CHECK_INCLUDE_FILES(string.h HAVE_STRING_H)
-CHECK_INCLUDE_FILES(sys/byteswap.h HAVE_SYS_BYTESWAP_H)
-CHECK_INCLUDE_FILES(sys/endian.h HAVE_SYS_ENDIAN_H)
-CHECK_INCLUDE_FILES(sys/mman.h HAVE_SYS_MMAN_H)
-CHECK_INCLUDE_FILES(sys/mman.h HAVE_FUNC_MMAP)
-CHECK_INCLUDE_FILES(sys/resource.h HAVE_SYS_RESOURCE_H)
-CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
-CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
-CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
-CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
-CHECK_INCLUDE_FILES(windows.h HAVE_WINDOWS_H)
-CHECK_INCLUDE_FILES(sys/uio.h HAVE_SYS_UIO_H)
+#CHECK_INCLUDE_FILES(stdint.h HAVE_STDINT_H)
+#CHECK_INCLUDE_FILES(stddef.h HAVE_STDDEF_H)
+#CHECK_INCLUDE_FILES(byteswap.h HAVE_BYTESWAP_H)
+#CHECK_INCLUDE_FILES(dlfcn.h HAVE_DLFCN_H)
+#CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
+#CHECK_INCLUDE_FILES(memory.h HAVE_MEMORY_H)
+#CHECK_INCLUDE_FILES(stdlib.h HAVE_STDLIB_H)
+#CHECK_INCLUDE_FILES(strings.h HAVE_STRINGS_H)
+#CHECK_INCLUDE_FILES(string.h HAVE_STRING_H)
+#CHECK_INCLUDE_FILES(sys/byteswap.h HAVE_SYS_BYTESWAP_H)
+#CHECK_INCLUDE_FILES(sys/endian.h HAVE_SYS_ENDIAN_H)
+#CHECK_INCLUDE_FILES(sys/mman.h HAVE_SYS_MMAN_H)
+#CHECK_INCLUDE_FILES(sys/mman.h HAVE_FUNC_MMAP)
+#CHECK_INCLUDE_FILES(sys/resource.h HAVE_SYS_RESOURCE_H)
+#CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
+#CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
+#CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
+#CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
+#CHECK_INCLUDE_FILES(windows.h HAVE_WINDOWS_H)
+#CHECK_INCLUDE_FILES(sys/uio.h HAVE_SYS_UIO_H)
 
 TEST_BIG_ENDIAN(WORDS_BIGENDIAN)
 
@@ -103,7 +103,7 @@ add_test(NAME snappy_test WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} COMMAND snappy
 
 ########### install #########################
 
-INSTALL(FILES snappy.h snappy-stubs-public.h
+INSTALL(FILES snappy.h snappy-c.h snappy-stubs-public.h snappy-export.h
         DESTINATION include)
 INSTALL(TARGETS snappy snappy_static
         RUNTIME DESTINATION bin
