--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ PROJECT(snappy)
 
 ###############
 # ASI default settings
-list(APPEND CMAKE_MODULE_PATH "$ENV{ASI}/cmake/Modules")
+list(APPEND CMAKE_MODULE_PATH "$ENV{ASV_CMAKE}")
 include(asv_cmake_defaults)
 asv_cmake_defaults( )
 ###############
